# Matrix

./: .gitignore  CMakeLists.txt
.gitignore/: .gitignore
Matrix/: CMakeLists.txt  Common.h  Matrix.cpp  Matrix.h  Matrix.vcxproj  Source.cpp  StressOut.txt
Matrix/include/matrix/: matrix.h  span.h
Tests/: CMakeLists.txt  main.cpp
